fix image on mobile view

--- a/style.css
+++ b/style.css
@@ -851,6 +851,42 @@ footer {
     width: 100%;
 }
 
+/* tab view */
+@media only screen and (max-width: 1100px) {
+    #featured-template {
+        display: flex;
+        padding: 120px 80px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 80px;
+        align-self: stretch;
+    }
+    .template-bx img {
+        display: flex;
+        height: 560px;
+        min-height: 560px;
+        max-height: 560px;
+        flex-direction: column;
+        align-items: flex-start;
+        flex-shrink: 0;
+        align-self: stretch;
+        max-width: 608px;
+    }
+    .template-bx {
+        max-width: 608px;
+    }
+    #blog {
+        display: flex;
+        padding: 0px 80px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 80px;
+        align-self: stretch;
+    }
+}
+
 
 /* mobile view */
 @media only screen and (max-width: 600px) {
@@ -1060,5 +1096,16 @@ footer {
     }
     .title-text p {
         display: none;
+    }
+    .template-bx img {
+        display: flex;
+        height: auto;
+        min-height: auto;
+        max-height: 560px;
+        flex-direction: column;
+        align-items: flex-start;
+        flex-shrink: 0;
+        align-self: stretch;
+        max-width: 608px;
     }
 }
